--- a/package.json
+++ b/package.json
@@ -23,7 +23,8 @@
   },
   "homepage": "https://github.com/koolii/async-subtask#readme",
   "dependencies": {
-    "child_process": "^1.0.2"
+    "child_process": "^1.0.2",
+    "path": "^0.12.7"
   },
   "devDependencies": {
     "jest": "^22.0.4",
