:up: add eslint settings

--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "exec async function into child_process using child_process.fork()",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "lint": "eslint src --ext .js"
   },
   "repository": {
     "type": "git",
@@ -27,6 +28,11 @@
     "path": "^0.12.7"
   },
   "devDependencies": {
+    "eslint": "^4.14.0",
+    "eslint-config-airbnb": "^16.1.0",
+    "eslint-plugin-import": "^2.8.0",
+    "eslint-plugin-jsx-a11y": "^6.0.3",
+    "eslint-plugin-react": "^7.5.1",
     "jest": "^22.0.4",
     "mocha": "^4.1.0"
   }
