:shower: resolve eslint errors

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -13,6 +13,8 @@
         "js": "never"
       }
     ],
-    "no-param-reassign": "off"
+    "no-param-reassign": "off",
+    "global-require": "off",
+    "import/no-dynamic-require": "off"
   }
 }
