--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "eslint-plugin-react": "^7.5.1",
     "jest": "^22.0.4",
     "mocha": "^4.1.0",
+    "node-fetch": "^1.7.3",
     "request": "^2.83.0",
     "request-promise": "^4.2.2"
   }
